# seekret-service

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.adoc  CHANGELOG.md  Cargo.toml  README.adoc  build.rs  id_ed25519-test  id_ed25519-test.pub  release.sh  secret-service.toml  test.kdbx  update-dependencies.sh
.github/workflow/: ci.yml
.github/workflows/: audit-on-push.yml  ci.yml  release.yml  rust.yml
src/: main.rs  my_window.rs  ok_abort_window.rs  password_window.rs  ssh_agent.rs
