[package]
name = "seekret-service"
version = "1.1.1"
edition = "2021"
authors = ["Michael Jaeger <michael.jaeger@in-flux.de>"]
license = "GPL-3.0"
description = "A daemon for accessing KeePass secrets using an HTTP API."
readme = "README.adoc"
repository = "https://github.com/michix/seekret-service"
keywords = ["cli", "keepass", "secrets"]
categories = ["command-line-utilities"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
actix-web = "4"
actix-rt = "2"
log = "0.4"
env_logger = "0.11"
confy = "0.6.1"
serde = "1.0.201"
serde_derive = "1.0.201"
clap = { version = "4.5.4", features = ["derive"] }
keepass = "0.7.10"
chrono = "0.4.38"
notify = "5.0.0"
futures = "0.3.31"

[target.'cfg(target_os = "macos")'.dependencies]
robius-authentication = "0.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winsafe = { version = "0.0.22", features = ["gui"] }

[dev-dependencies]
test-log = "0.2.16"
