[package]
name = "seekret-service"
version = "1.3.1-SNAPSHOT"
edition = "2021"
authors = ["Michael Jaeger <michael.jaeger@in-flux.de>"]
license = "GPL-3.0"
description = "A daemon for accessing KeePass secrets using an HTTP API."
readme = "README.adoc"
repository = "https://github.com/michix/seekret-service"
keywords = ["cli", "keepass", "secrets"]
categories = ["command-line-utilities"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
actix-web = "4"
actix-rt = "2"
log = "0.4"
env_logger = "0.11"
confy = "1.0.0"
serde = "1.0.219"
serde_derive = "1.0.219"
clap = { version = "4.5.40", features = ["derive"] }
keepass = "0.8.3"
rand = "0.10.1"
chrono = "0.4.41"
notify = "8.0.0"
futures = "0.3.31"
chacha20poly1305 = "0.10.1"
zeroize = "1"

[target.'cfg(target_os = "macos")'.dependencies]
robius-authentication = "0.1.1"
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = ["NSRunLoop", "NSThread"] }
objc2-app-kit = { version = "0.2.2", features = ["NSAlert", "NSApplication", "NSButton", "NSEvent", "NSMenu" , "NSMenuItem", "NSResponder", "NSRunningApplication", "NSView", "NSControl", "NSTextField", "NSSecureTextField", "NSWindow", "NSWorkspace"] }

[target.'cfg(target_os = "windows")'.dependencies]
winsafe = { version = "0.0.24", features = ["gui"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
ssh-key = { version = "0.6", features = ["crypto", "encryption"] }
ssh-encoding = "0.2"
signature = "2"

[dev-dependencies]
test-log = "0.2.17"
